--- a/pinyougou/pinyougou-dao/pom.xml
+++ b/pinyougou/pinyougou-dao/pom.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!--这是新加的-->
     <parent>
         <artifactId>pinyougou</artifactId>
         <groupId>com.pinyougou</groupId>
