--- a/pinyougou/pinyougou-dao/pom.xml
+++ b/pinyougou/pinyougou-dao/pom.xml
@@ -4,6 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <!--这是新加的-->
+    <!--这是新加的-->
+    <!--这是新加的-->
     <parent>
         <artifactId>pinyougou</artifactId>
         <groupId>com.pinyougou</groupId>
